# toolbox-pyspark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yaml  pyproject.toml  versions.json
.github/workflows/: .ci.yml  cd.yml  ci.yml
cov-report/xml/: cov-report.xml
docs/: index.md
docs/code/: checks.md  cleaning.md  columns.md  constants.md  datetime.md  delta.md  dimensions.md  duplication.md  formatting.md  index.md  info.md  io.md  scale.md  schema.md  types.md
docs/usage/: application.md  roadmap.md
latest/: 404.html  objects.inv
latest/overrides/: home.html
latest/search/: search_index.json
requirements/: root.txt  test.txt
src/cli/: changelog.sh  init.sh
src/tests/: __init__.py  delta.py  setup.py  test_checks.py  test_cleaning.py  test_columns.py  test_datetime.py  test_dimensions.py  test_duplication.py  test_formatting.py  test_info.py  test_io.py  test_keys.py  test_scale.py  test_schema.py  test_types.py
src/toolbox_pyspark/: checks.py  cleaning.py  columns.py  constants.py  datetime.py  delta.py  dimensions.py  duplication.py  formatting.py  info.py  io.py  keys.py  scale.py  schema.py  types.py
v0.1.0/: index.html
v0.1.0/code/: index.html
v0.1.0/search/: search_index.json
v0.10.0/: 404.html  index.html  objects.inv
v0.10.0/code/: index.html
v0.10.0/search/: search_index.json
v0.11.0/: 404.html  index.html  objects.inv
v0.11.0/code/: index.html
v0.11.0/search/: search_index.json
v0.12.0/: 404.html  index.html  objects.inv
v0.12.0/code/: index.html
v0.12.0/search/: search_index.json
v0.2.0/: 404.html
v0.3.0/: index.html  objects.inv
v0.3.0/code/: index.html
v0.3.0/search/: search_index.json
v0.3.1/: 404.html  index.html  objects.inv
v0.3.1/code/: index.html
v0.3.1/search/: search_index.json
v0.4.0/: 404.html  index.html  objects.inv
v0.4.0/code/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: 404.html  index.html  objects.inv
v0.5.0/code/: index.html
v0.5.0/search/: search_index.json
v0.6.0/: 404.html  index.html  objects.inv
v0.6.0/code/: index.html
v0.6.0/search/: search_index.json
v0.7.0/: 404.html  index.html  objects.inv
v0.7.0/code/: index.html
v0.7.0/search/: search_index.json
v0.8.0/: 404.html  index.html  objects.inv
v0.8.0/code/: index.html
v0.8.0/search/: search_index.json
v0.9.0/: 404.html  index.html  objects.inv
v1.0.0/: 404.html  index.html  objects.inv
v1.1.0/: 404.html  index.html  objects.inv
v1.2.0/: 404.html  index.html  objects.inv
v1.2.1/: 404.html  index.html  objects.inv
(+331 files in other folders)
